# tej-bazaar

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  reconcile_report.md
.github/workflows/: daily.yml
pipeline/: __init__.py  cli.py  fetch.py  holidays.py  parse.py  publish.py  push.py  symbol_history.py  transform.py
pipeline/actions/: __init__.py  back_adjust.py  factors.py  fetch.py  parse.py  schema.py  scrip_map.py
pipeline/metrics/: __init__.py  returns.py  rolling.py
pipeline/reconcile/: __init__.py  compare.py  yahoo.py
scripts/: reconcile_yahoo_sweep.py
tests/: test_actions_back_adjust.py  test_actions_factors.py  test_actions_fetch.py  test_actions_parse.py  test_actions_scrip_map.py  test_cli.py  test_fetch.py  test_holidays.py  test_metrics_returns.py  test_metrics_rolling.py  test_parse.py  test_publish.py  test_push.py  test_reconcile_compare.py  test_reconcile_yahoo.py  test_symbol_history.py  test_transform.py
tests/fixtures/: bse_actions_sample.json  bse_bhavcopy_20250430_sample.csv  nse_actions_sample.json  nse_bhavcopy_20250430_sample.csv
