[project]
name = "tej-bazaar"
version = "0.1.0"
description = "Free, open EOD market data pipeline for NSE & BSE"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "requests>=2.32",
    "exchange-calendars>=4.5",
    "huggingface-hub>=0.24",
    "pyarrow>=16.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "responses>=0.25",
]

[project.scripts]
tej-bazaar = "pipeline.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
